--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "bookmark-ui",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "tauri": "tauri"
-  },
-  "dependencies": {
-    "@tauri-apps/api": "^1.2.0"
-  },
-  "devDependencies": {
-    "@tauri-apps/cli": "^1.2.2",
-    "vite": "^4.0.0",
-    "typescript": "^4.8.2"
-  }
+	"name": "bookmark-ui",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"wasm": "wasm-pack build ./src-wasm --target web",
+		"dev": "pnpm wasm && vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview",
+		"tauri": "tauri"
+	},
+	"dependencies": {
+		"@tauri-apps/api": "^1.2.0"
+	},
+	"devDependencies": {
+		"@tauri-apps/cli": "^1.2.2",
+		"typescript": "^4.8.2",
+		"vite": "^4.2.0",
+		"vite-plugin-wasm-pack": "^0.1.12"
+	}
 }
