--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"wasm": "wasm-pack build ./src-wasm --target web",
-		"dev": "pnpm wasm && vite",
+		"dev": "vite",
 		"build": "tsc && vite build",
 		"preview": "vite preview",
 		"tauri": "tauri"
