--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,6 +16,12 @@ tauri-build = { version = "1.2", features = [] }
 tauri = { version = "1.2", features = ["shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+bookmark-data = { git = "https://github.com/axel-lord/bookmark-data", version = "0.1.0" }
+tap = "1.0.1"
+tokio = { version = "1.26.0", features = ["full"] }
+native-dialog = { version = "0.6.3", features = ["windows_dpi_awareness", "windows_visual_styles"] }
+thiserror = "1.0.40"
+rmp = "0.8.11"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
