--- a/src-wasm/Cargo.toml
+++ b/src-wasm/Cargo.toml
@@ -9,5 +9,6 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 js-sys = "0.3.61"
+tap = "1.0.1"
 wasm-bindgen = "0.2.84"
-web-sys = { version = "0.3.61", features = ["Window", "HtmlParagraphElement", "Document"] }
+web-sys = { version = "0.3.61", features = ["Window", "HtmlParagraphElement", "Document", "console"] }
