--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"tauri": "tauri"
 	},
 	"dependencies": {
-		"@tauri-apps/api": "^1.2.0"
+		"@tauri-apps/api": "^1.2.0",
+		"sass": "^1.59.3"
 	},
 	"devDependencies": {
 		"@tauri-apps/cli": "^1.2.2",
