--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,6 +22,7 @@ tokio = { version = "1.26.0", features = ["full"] }
 native-dialog = { version = "0.6.3", features = ["windows_dpi_awareness", "windows_visual_styles"] }
 thiserror = "1.0.40"
 rmp = "0.8.11"
+open = "4.0.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
